# slm_benchmark

./: .gitignore
small-doc-ie-bench/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
small-doc-ie-bench/.github/workflows/: regression-gate.yml
small-doc-ie-bench/configs/: benchmark.yaml  judge_calibration.example.json  models.yaml  regression-budgets.yaml  routing-policy.example.yaml
small-doc-ie-bench/data/: datasets.yaml
small-doc-ie-bench/data/sample_dataset/: .gitattributes  manifest.jsonl
small-doc-ie-bench/docs/: ARCHITECTURE.md  CLI_TUTORIAL.md  THREAT_MODEL.md  docie-studio.md  serving-control-plane.md  serving-factory.md
small-doc-ie-bench/examples/: invoice_ocr_request.json
small-doc-ie-bench/examples/serving/: deployment-status.json  model-list.json  plan.json
small-doc-ie-bench/frontend/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.ts
small-doc-ie-bench/scripts/: build_voxel51_manifest.py  download_gguf.py  healthcheck.py
small-doc-ie-bench/tests/: conftest.py  test_agents.py  test_capability_probe.py  test_comparison.py  test_cors.py  test_cost_accounting.py  test_cost_guard.py  test_dashboards.py  test_dataset_registry.py  test_dynamic_schema.py  test_encoder_runtime.py  test_encoders.py  test_gateway.py  test_grounding.py  test_inngest_seed.py  test_judge_calibration.py  test_judge_evaluation.py  test_label_provenance.py  test_lfm2_family.py  test_mesh.py  test_metrics.py  test_model_catalog.py  test_model_gateway.py  test_negotiation_benchmark.py  test_nuextract3_wiring.py  test_nuextract_normalization.py  test_nuextract_vision_deploy.py  test_ocr_cache.py  test_ocr_lab.py  test_orchestrator.py  test_pdf_text_backend.py  test_profile_resolver.py  test_report.py  test_reproducibility.py  test_response_negotiation.py  test_review_workflow.py  test_routing.py  test_routing_benchmark.py  test_schema_validation.py  test_security.py  (+24 more)
(+158 files in other folders)
