[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "small-doc-ie-bench"
version = "0.1.0"
description = "CPU-only benchmark harness for structured document extraction with small LLMs"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "tenacity>=8.5.0",
  "orjson>=3.10.0",
  "PyYAML>=6.0.2",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "jsonschema>=4.23.0",
  "prometheus-client>=0.20.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "liteparse>=2.0.7",
  "Pillow>=10.4.0",
  "python-dateutil>=2.9.0",
  "jinja2>=3.1.4",
  "pandas>=2.2.2",
  "rapidfuzz>=3.9.6",
  "psutil>=5.9.0",
  "questionary>=2.0.0",
  "textual>=1.0.0",
  "inngest>=0.5.19",
  "protobuf>=4.25"
]

[project.optional-dependencies]
ocr = [
  "pytesseract>=0.3.13"
]
paddle = [
  "paddleocr>=2.8.0"
]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.6",
  "mypy>=1.11.1",
  "types-PyYAML>=6.0.12.20240808"
]

[project.scripts]
docie-bench = "docie_bench.cli:app"
docie-bench-ui = "docie_bench.cli2:main"
docie = "docie_bench.serving.cli:app"
docie-serving = "docie_bench.serving.cli:app"
docie-bench-dash = "docie_bench.dashboard:main"
docie-serve-dash = "docie_bench.serving.dashboard:main"
docie-worker = "docie_bench.inngest.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "PT", "SIM"]
ignore = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
